--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,8 @@
 - login views , url done :)
 
 - signup view , url done :)
+
+- dashboard = delete_post views done :)
+
+- django-tinymce installed for rich text editor
+  - update urls, models.py and settings for django-tinymce
